<resources>
    <string name="app_name">SnargeMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">User@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_events">Events</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_artists">Artists</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_price">Event Price</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="book_event">Book Event</string>
    <string name="event_name">Event Name</string>
    <string name="update_button_description">Update Artist</string>
    <string name="delete_button_description">Delete Artist</string>

    <!-- user strings -->
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="_12_345_678">12 345 678</string>
</resources>