<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name" />

    <EditText
        android:id="@+id/editTextEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description" />

    <EditText
        android:id="@+id/editTextEventDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_date" />

    <EditText
        android:id="@+id/editTextEventPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_price"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonUpdateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update" />

    <Button
        android:id="@+id/buttonDeleteEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <!-- New "Mark as Paid" button -->
    <Button
        android:id="@+id/buttonPayEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_event" />
</LinearLayout>
