<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/firstNameEditText"
        android:autofillHints="first name"
        android:hint="@string/first_name"
        android:inputType="textEmailAddress"
        android:minWidth="350dp"
        android:minHeight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:autofillHints="familyName"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        android:minWidth="350dp"
        android:minHeight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/phoneEditText"
        android:autofillHints="phone number"
        android:hint="@string/_12_345_678"
        android:inputType="phone"
        android:minWidth="350dp"
        android:minHeight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/emailEditText"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minWidth="350dp"
        android:minHeight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minWidth="350dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:text="@string/register" />

    <!-- Sign In TextView -->
    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>
