<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.snargemobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.snargemobile.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_forum"
        android:name="com.example.snargemobile.ui.forum.ForumFragment"
        android:label="@string/menu_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/nav_artists"
        android:name="com.example.snargemobile.ui.artists.ArtistsFragment"
        android:label="@string/menu_artists"
        tools:layout="@layout/fragment_artists" />

</navigation>